2011-01-22  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream-mem.c (stream_write): Correctly calculate the
	end boundary of the stream when bound_end is -1.

2010-12-05  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.4

2010-11-29  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (decode_address): Handle edge cases
	where inptr reaches the end of the input string prematurely due to
	a malformed address.

2010-11-29  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #635409.

	* gmime/gmime-pkcs7-context.c (pkcs7_get_validity): Reworked the
	logic to calculate the signer status. Also dropped
	GMimeSignatureStatus logic.

	* gmime/gmime-gpg-context.c (gpg_verify): Removed the (broken)
	logic of calculating a GMimeSignatureStatus.
	(gpg_decrypt): Same.
	(gpg_ctx_parse_signer_info): Updated for the g_mime_signer_new()
	API change.

	* gmime/gmime-crypto-context.c (g_mime_signature_validity_new): No
	longer initializes a GMimeSignatureStatus member.
	(g_mime_signature_validity_get_status): Removed.
	(g_mime_signature_validity_set_status): Removed.
	(g_mime_signer_new): Now takes a GMimeSignerStatus so that I could
	get rid of the default NONE status.

	* gmime/gmime-crypto-context.h (GMimeSignatureStatus): Removed.

2010-11-24  Jeffrey Stedfast  <fejj@novell.com>

	Fixes bug #635661.

	* gmime/gmime-crypto-context.c (g_mime_signer_new): Initialize
	pubkey_algo and hash_algo.
	(g_mime_signer_[g,s]et_pubkey_algo): Implemented.
	(g_mime_signer_[g,s]et_hash_algo): Renamed from [g,s]et_hash().

	* gmime/gmime-crypto-context.h (GMimeCryptoPubKeyAlgo): Defined
	enum.

	* gmime/gmime-pkcs7-context.c (pkcs7_get_validity): Record the
	hash and pubkey algorithms used in the GMimeSigner.

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_signer_info): Record
	the pubkey algorithm used by the signer.

2010-11-22  Jeffrey Stedfast  <fejj@novell.com>
